k8s/argocdapps/misskey/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: misskey
        app.kubernetes.io/name: misskey
    name: misskey
    namespace: misskey
spec:
    ports:
        - port: 8080
          protocol: TCP
          targetPort: 3000
    selector:
        app: misskey
        app.kubernetes.io/name: misskey
    type: ClusterIP

---
