k8s/argocdapps/misskey/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 1G
    labels:
        app: misskey
        app.kubernetes.io/name: misskey
    name: misskey
    namespace: misskey
spec:
    ingressClassName: nginx
    rules:
        - host: misskey.walnuts.dev
          http:
            paths:
                - backend:
                    service:
                        name: misskey
                        port:
                            number: 8080
                  path: /
                  pathType: Prefix

---
